Fixes for Comments. Sorting for posts, categories, tags and users. Fix to show all posts within a parent category. Fix for Vote Simple to bump a post to the front page (I accidentally removed that in Hotaru 0.6!). Dropped friendly urls for pagination (way too fragile). New "Upcoming" page which shows the highest ranked posts from the Latest page, but only for 5 days (default). I use it on JapanSoc to keep the best of the newest stories in focus before they get pushed out of view. Other bug fixes and tweaks.

--- a/0.8/content/plugins/vote_simple/css/vote_simple.css
+++ b/0.8/content/plugins/vote_simple/css/vote_simple.css
@@ -51,3 +51,12 @@
 .sidebar_posts_vote { padding: 0 0.5em 0 0.5em; margin-right: 0.5em; }
 .vote_color_new { background-color: #66CCFF; }
 .vote_color_top { background-color: #FFCC33; }
+
+/* ***********************************
+ * ******* SORT LINKS ********
+ * ********************************* */
+ 
+#sort_box { font-size: 0.9em; margin-bottom: 1.0em;}
+.sort_menu li { display: inline; margin: 0 0.3em 0 0.3em; padding: 0.2em;}
+.sort_menu li.active { background-color: #444; }
+.sort_menu li.active a { color: #fff; }
